[project]
name = "ptnad"
version = "0.1.0"
description = "Python library for interacting with the PT NAD API"
readme = "README.md"
license = "MIT"
license_files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
authors = [
    { name = "Andrey Tyulenev" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
